--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Merlot theme
-description: Merlot is a theme for GitHub Pages.
+title: Muttalip Kucuk
+description: Software engineer
 show_downloads: true
-google_analytics:
+google_analytics: UA-55373939-7
 theme: jekyll-theme-merlot
