Modified description and show_downloads

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Muttalip Kucuk
-description: Software engineer
-show_downloads: true
+description: Developing software, apps, website and so on...
+show_downloads: false
 google_analytics: UA-55373939-7
 theme: jekyll-theme-merlot
