--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Muttalip Kucuk
-description: Developing software, apps, website and so on...
+title: Muttalip Küçük
+description: Developing software, websites, apps and so on...
 show_downloads: false
 google_analytics: UA-55373939-7
 theme: jekyll-theme-merlot
