--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Developing software, websites, apps and so on...
 show_downloads: false
 google_analytics: UA-55373939-7
 theme: jekyll-theme-merlot
+plugins:
+- jekyll-menus
