--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Muttalip Küçük
-description: Developing software, websites, apps and so on...
-show_downloads: false
+description: Software developer
+show_downloads: true
 google_analytics: UA-55373939-7
 theme: jekyll-theme-merlot
