--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Muttalip Küçük
 description: Software developer
 show_downloads: false
 google_analytics: UA-55373939-7
-theme: jekyll-theme-merlot
+theme: jekyll-theme-cayman
