--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Muttalip Küçük
-description: Software developer
+description: Software Developer
 show_downloads: false
 google_analytics: UA-55373939-7
 theme: jekyll-theme-cayman
