--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # https://stackoverflow.com/users/8092705/muttalip-kucuk
+  stackoverflow    : https://stackoverflow.com/users/8092705/muttalip-kucuk
   steam            :
   tumblr           :
   twitter          : "muttalipkucuk"
